COLLADA import crash 2.60 #29058

Closed
opened 2011-10-27 19:03:17 +02:00 by Dusan Maliarik · 4 comments

%%%Crashes with attached data, 2.60, same on Linux and Darwin

0 org.blenderfoundation.blender 0x00700f65 AnimationImporter::get_animation_type(COLLADAFW::Node const*, std::map<COLLADAFW::UniqueId, COLLADAFW::Object const*, std::lessCOLLADAFW::UniqueId, std::allocator<std::pair<COLLADAFW::UniqueId const, COLLADAFW::Object const*> > >) + 789
1 org.blenderfoundation.blender 0x007038a8 AnimationImporter::translate_Animations(COLLADAFW::Node*, std::map<COLLADAFW::UniqueId, COLLADAFW::Node*, std::lessCOLLADAFW::UniqueId, std::allocator<std::pair<COLLADAFW::UniqueId const, COLLADAFW::Node*> > >&, std::map<COLLADAFW::UniqueId, Object*, std::lessCOLLADAFW::UniqueId, std::allocator<std::pair<COLLADAFW::UniqueId const, Object*> > >&, std::map<COLLADAFW::UniqueId, COLLADAFW::Object const*, std::lessCOLLADAFW::UniqueId, std::allocator<std::pair<COLLADAFW::UniqueId const, COLLADAFW::Object const*> > >) + 248
2 org.blenderfoundation.blender 0x0071892f DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 207
3 org.blenderfoundation.blender 0x00718971 DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 273
4 org.blenderfoundation.blender 0x00718971 DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 273
5 org.blenderfoundation.blender 0x00718971 DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 273
6 org.blenderfoundation.blender 0x00719885 DocumentImporter::finish() + 549
7 org.blenderfoundation.blender 0x01824a21 COLLADASaxFWL::Loader::loadDocument(std::string const&, COLLADAFW::IWriter*) + 513
8 org.blenderfoundation.blender 0x01a5ee5a COLLADAFW::Root::loadDocument(std::string const&) + 42
9 org.blenderfoundation.blender 0x0071514f DocumentImporter::import() + 191
10 org.blenderfoundation.blender 0x0070f083 collada_import + 51
11 org.blenderfoundation.blender 0x0015b0b7 wm_collada_import_exec + 199
12 org.blenderfoundation.blender 0x00150bd5 wm_operator_invoke + 357

%%%

%%%Crashes with attached data, 2.60, same on Linux and Darwin 0 org.blenderfoundation.blender 0x00700f65 AnimationImporter::get_animation_type(COLLADAFW::Node const*, std::map<COLLADAFW::UniqueId, COLLADAFW::Object const*, std::less<COLLADAFW::UniqueId>, std::allocator<std::pair<COLLADAFW::UniqueId const, COLLADAFW::Object const*> > >) + 789 1 org.blenderfoundation.blender 0x007038a8 AnimationImporter::translate_Animations(COLLADAFW::Node*, std::map<COLLADAFW::UniqueId, COLLADAFW::Node*, std::less<COLLADAFW::UniqueId>, std::allocator<std::pair<COLLADAFW::UniqueId const, COLLADAFW::Node*> > >&, std::map<COLLADAFW::UniqueId, Object*, std::less<COLLADAFW::UniqueId>, std::allocator<std::pair<COLLADAFW::UniqueId const, Object*> > >&, std::map<COLLADAFW::UniqueId, COLLADAFW::Object const*, std::less<COLLADAFW::UniqueId>, std::allocator<std::pair<COLLADAFW::UniqueId const, COLLADAFW::Object const*> > >) + 248 2 org.blenderfoundation.blender 0x0071892f DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 207 3 org.blenderfoundation.blender 0x00718971 DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 273 4 org.blenderfoundation.blender 0x00718971 DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 273 5 org.blenderfoundation.blender 0x00718971 DocumentImporter::translate_anim_recursive(COLLADAFW::Node*, COLLADAFW::Node*, Object*) + 273 6 org.blenderfoundation.blender 0x00719885 DocumentImporter::finish() + 549 7 org.blenderfoundation.blender 0x01824a21 COLLADASaxFWL::Loader::loadDocument(std::string const&, COLLADAFW::IWriter*) + 513 8 org.blenderfoundation.blender 0x01a5ee5a COLLADAFW::Root::loadDocument(std::string const&) + 42 9 org.blenderfoundation.blender 0x0071514f DocumentImporter::import() + 191 10 org.blenderfoundation.blender 0x0070f083 collada_import + 51 11 org.blenderfoundation.blender 0x0015b0b7 wm_collada_import_exec + 199 12 org.blenderfoundation.blender 0x00150bd5 wm_operator_invoke + 357 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Collada bugs are not being handled well so far,

for this reason they are all being set as 'TODO' and linked from our wiki page.

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada

This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Collada bugs are not being handled well so far, for this reason they are all being set as \'TODO\' and linked from our wiki page. http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%
Member

%%%The collada file still crashed bledner in recent trunk versions.
The reason for the crash is that the collada file contains
a reference to a non existing camera.

I have added code to prevent blender from crashing in svn revision 49573
Blender now reports in the console when it finds a missing camera reference.

Please note: The file now imports, but of course the missing camera reference is not resolved. However it looks to me like there are other issues with positioning of some objects.

@Dusan Maliarik: Please could you take a look at this and open a new report if you find issues with the object positioning ?%%%

%%%The collada file still crashed bledner in recent trunk versions. The reason for the crash is that the collada file contains a reference to a non existing camera. I have added code to prevent blender from crashing in svn revision 49573 Blender now reports in the console when it finds a missing camera reference. Please note: The file now imports, but of course the missing camera reference is not resolved. However it looks to me like there are other issues with positioning of some objects. @Dusan Maliarik: Please could you take a look at this and open a new report if you find issues with the object positioning ?%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29058
No description provided.