COLLADA: #29058 Fixed crash when illegal reference to non existing camera object is found. And report a warning to the console)